product_docs/docs/postgis/3.1/01a_installing_postgis.mdx
---
title: "Installing PostGIS"

---

<div id="installing_postgis" class="registered_link"></div>

This table lists the latest PostGIS versions and their supported corresponding EDB Postgres Advanced Server (EPAS) versions. PostGIS is supported on the same platforms as EDB Postgres Advanced Server. See [Product Compatibility](https://www.enterprisedb.com/platform-compatibility#epas) for details.

| PostGIS | EPAS 14 | EPAS 13 | EPAS 12 | EPAS 11 | EPAS 10 | 
| ------- | ------- | ------- | ------- | ------- | ------- | 
| 3.1     | Y       | Y       | Y       | Y       | Y       | 
| 3.0     | Y       | Y       | Y       | Y       | N       | 
| 2.5     | N       | N       | Y       | Y       | N       | 
| 2.4     | N       | N       | N       | Y       | Y       | 
| 2.3     | N       | N       | N       | N       | Y       | 


The documented and supported functionality of each version of PostGIS is the same. The information in this documentation applies to all supported versions of PostGIS.

See the following sections to install EDB PostGIS on specific hosts.

    
<div id="installing_on_centos" class="registered_link"></div>

## Installing PostGIS on a CentOS/Rocky Linux/AlmaLinux x86-64 Host

Before creating the repository configuration file, you must have credentials that allow access to the EnterpriseDB repository. For information about requesting credentials, visit the [EDB website](https://www.enterprisedb.com/user).

Perform the following steps:

1.  To create the repository configuration file, assume superuser privileges, and invoke the platform-specific command:

    On CentOS 7:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

    On Rocky Linux 8 or AlmaLinux 8:

    ```text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace the `USERNAME:PASSWORD` variable in the following command with the username and password of a registered EnterpriseDB user:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Before installing PostGIS, you need to install the Extra Packages for Enterprise Linux (EPEL) release package:

    On CentOS 7:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

    On Rocky Linux 8 or AlmaLinux 8:

    ```text
    dnf -y install epel-release
    ```

4.  The following  steps are applicable only for Rocky Linux 8 or AlmaLinux 8 platform:

    a. Enable the PowerTools repository to satisfy package dependencies:

    ```text
    dnf config-manager --set-enabled PowerTools
    ```

    b. Disable the built-in PostgreSQL module:

    ```text
    dnf -qy module disable postgresql
    ```

5.  Invoke the platform-specific command to install `PostGIS`:

    On CentOS 7, to install the latest version of PostGIS version for EDB Advanced Server version 13.0:

    ```text
    yum -y install edb-as13-postgis3
    ```

    On Rocky Linux 8 or AlmaLinux 8, to install the latest version of PostGIS version for EDB Advanced Server version 13.0:

    ```text
    dnf -y install edb-as13-postgis3
    ```

    On CentOS 7, to install the latest version of PostGIS for EDB Advanced Server versions older than 13.0:

    ```text
    yum -y install edb-as<xx>-postgis
    ```

    where &lt;xx> denotes the Advanced Server version older than 13.0.

    On CentOS 7, to install PostGIS older versions (for example PostGIS 3.0.2) for EDB Advanced Server version 13.0:

    ```text
    yum -y install edb-as13-postgis3-3.0.2
    ```

    On CentOS 7, to install older PostGIS versions for EDB Advanced Server versions older than 13.0:

    ```text
    yum -y install edb-as<xx>-postgis-<y.y.y>
    ```

    where &lt;xx> is the Advanced Server version older than 13.0 and &lt;y.y.y> is the older PostGIS version.
    
    For example, to install PostGIS 2.5.4 on Advanced Server 12:

    ```text
    yum -y install edb-as12-postgis-2.5.4
    ```

    When you install an RPM package signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y` and press `Return` to continue.

    !!! Note
        After installing PostGIS with a package manager, you must manually create a template database and the required PostGIS extension.

<div id="installing_on_rhel" class="registered_link"></div>

## Installing PostGIS on an RHEL x86-64 Host 

Before installing the repository configuration file, you must have credentials that allow access to the EnterpriseDB repository. For information about requesting credentials, visit the [EDB website](https://www.enterprisedb.com/user).

Perform the following steps to install PostGIS on an RHEL Host:

1.  To create the repository configuration file, assume superuser privileges, and invoke the platform-specific command:

    On RHEL 7:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

    On RHEL 8:

    ```text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace the `USERNAME:PASSWORD` variable with the username and password of a registered EnterpriseDB user:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Before installing PostGIS, you need to install the Extra Packages for Enterprise Linux (EPEL) release package:

    On RHEL 7:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

    On RHEL 8:

    ```text
    dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
    ```

4.  Enable additional platform-specific repositories:

    On RHEL 7, enable the `optional, extras`, and `HA` repositories to satisfy package dependencies:

    ```text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

    On RHEL 8, enable the `codeready-builder-for-rhel-8-*-rpms` repository to satisfy EPEL packages dependency:

    ```text
    ARCH=$( /bin/arch )

    subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
    ```

5.  On RHEL 8 platform, disable the built-in PostgreSQL module:

    ```text
    dnf -qy module disable postgresql
    ```

6.  Invoke the platform-specific command to install `PostGIS`:

    On RHEL 7, to install the latest version of PostGIS for EDB Advanced Server version 13.0:

    ```text
    yum -y install edb-as13-postgis3
    ```

    On RHEL 8, to install the latest version of PostGIS for EDB Advanced Server version 13.0:

    ```text
    dnf -y install edb-as13-postgis3
    ```

    On RHEL 7, to install the latest version of PostGIS for EDB Advanced Server version older than 13.0:

    ```text
    yum -y install edb-as<xx>-postgis
    ```

    where &lt;xx> denotes the Advanced Server version older than 13.0.

    On RHEL 7, to install PostGIS older versions (for example PostGIS 3.0.2) for EDB Advanced Server version 13.0:

    ```text
    yum -y install edb-as13-postgis3-3.0.2
    ```

    On RHEL 7, to install older PostGIS versions for EDB Advanced Server version older than 13.0:

    ```text
    yum -y install edb-as<xx>-postgis-<y.y.y>
    ```

    where &lt;xx> is the Advanced Server version older than 13.0 and &lt;y.y.y> is the older PostGIS version.
    
    For example, to install PostGIS 2.5.4 on EDB Advanced Server version 12:

    ```text
    yum -y install edb-as12-postgis-2.5.4
    ```

    When you install an RPM package signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y` and press `Return` to continue.

    !!! Note
        After installing PostGIS with a package manager, you must manually create a template database and the required PostGIS extension.

<div id="installing_on_ppcle" class="registered_link"></div>

## Installing PostGIS on an RHEL 7 ppc64le Host

Before installing the repository configuration, you must have credentials that allow access to the EnterpriseDB repository. For information about requesting credentials, visit the [EDB website](https://www.enterprisedb.com/user).

Perform the following steps to install PostGIS on an RHEL 7 PPC64LE Host.

1.  Create the Advance Toolchain repository configuration file:

    ```text
    rpm --import https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7/gpg-pubkey-6976a827-5164221b

    cat > /etc/yum.repos.d/advance-toolchain.repo <<EOF

    # Beginning of the configuration file
    [advance-toolchain]
    name=Advance Toolchain IBM FTP
    baseurl=https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7
    failovermethod=priority
    enabled=1
    gpgcheck=1
    gpgkey=ftp://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHELX/gpg-pubkey-6976a827-5164221b
    # End of the configuration file
    ```

2.  To create the EnterpriseDB repository configuration file, assume superuser privileges and invoke the following command:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

3.  Replace the `USERNAME:PASSWORD` variable with the username and password of a registered EnterpriseDB user:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

4.  Before installing PostGIS, you need to install the Extra Packages for Enterprise Linux (EPEL) release package:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

5.  On RHEL 7, enable the `optional, extras`, and `HA` repositories to satisfy package dependencies:

    ```text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

6.  Invoke the following command to install PostGIS:

    To install the latest version of PostGIS version for EDB Advanced Server version 13.0:

    ```text
    yum -y install edb-as13-postgis3
    ```

    To install the latest version of PostGIS for EDB Advanced Server version older than 13.0:

    ```text
    yum -y install edb-as<xx>-postgis
    ```

    where &lt;xx> denotes the Advanced Server version older than 13.0.
    
    To install PostGIS older versions (for example PostGIS 3.0.2) for EDB Advanced Server version 13.0:

    ```text
    yum -y install edb-as13-postgis3-3.0.2
    ```

    To install older PostGIS versions for EDB Advanced Server versions older than 13.0:

    ```text
    yum -y install edb-as<xx>-postgis-<y.y.y>
    ```

    where &lt;xx> is the Advanced Server version older than 13.0 and &lt;y.y.y> is the older PostGIS version.
    
    For example, to install PostGIS 2.5.4 on EDB Advanced Server version 12:

    ```text
    yum -y install edb-as12-postgis-2.5.4
    ```

    When you install an RPM package signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y` and press `Return` to continue.

    !!! Note
        After installing PostGIS with a package manager, you must manually create a template database and the required PostGIS extension.

## Installing PostGIS on an RHEL 8 ppcl64le Host

There are two steps to completing an installation:

- Setting up the repository
- Installing the package

For each step, you must be logged in as superuser.

To log in as a superuser:

```shell
sudo su -
```

#### Setting up the Repository

1. To register with EDB to receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

1. Set up the EDB repository:

   ```shell
   dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
   ```

   This creates the /etc/yum.repos.d/edb.repo configuration file.

1. Add your EDB credentials to the edb.repo file:  

   ```shell
   sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
   ```

   where `USERNAME:PASSWORD` is the username and password available from your
   [EDB account](https://www.enterprisedb.com/user).

1. Install the EPEL repository and refresh the cache:

   ```shell
   dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
   dnf makecache
   ```

1. Enable the codeready-builder-for-rhel-8-\*-rpms repository since EPEL packages may depend on packages from it:

   ```shell
   ARCH=$( /bin/arch )
   subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
   ```

1. Disable the built-in PostgreSQL module:
   ```shell
   dnf -qy module disable postgresql
   ```

#### Installing the Package

```shell
dnf -y install edb-as<xx>-postgis3
```

where &lt;xx> is the version of the server.

<div id="installing_a_deb_package_on_a_debian_or_ubuntu_host" class="registered_link"></div>

## Installing PostGIS on a Debian/Ubuntu Host

To install a PostGIS package on a Debian or Ubuntu host, you must have credentials to access the EnterpriseDB repository. If you need EnterpriseDB credentials, visit the [EDB website](https://www.enterprisedb.com/user) for credentials.

Perform the following steps to install PostGIS Debian package using the EnterpriseDB repository:

1.  Assume superuser privileges:

    ```text
    sudo su –
    ```

2.  Configure the EnterpriseDB repository.

    On Debian 9, Ubuntu 18, and Ubuntu 20, invoke the folloiwng command and substitute your EnterpriseDB credentials for the `username` and `password` placeholders.
    
    ```text
    sh -c 'echo "deb https://username:password@apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    ```

    On Debian 10:

    a.  Set up the EnterpriseDB repository:

    ```text
    sh -c 'echo "deb [arch=amd64] https://apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    ```

    b.  Substitute your EnterpriseDB credentials for the `username` and `password` placeholders in the following command:

    ```text
    sh -c 'echo "machine apt.enterprisedb.com login <username> password <password>" > /etc/apt/auth.conf.d/edb.conf'
    ```

3.  Add support to your system for secure APT repositories:

    ```text
    apt-get install apt-transport-https
    ```

4.  Add the EDB signing key:

    ```text
    wget -q -O - https://apt.enterprisedb.com/edb-deb.gpg.key  | sudo apt-key add -
    ```

5.  Update the repository metadata:

    ```text
    apt-get update
    ```

6.  Install the Debian package:

    To install the latest version of PostGIS for EDB Advanced Server version 13.0:

    ```text
    apt-get install edb-as13-postgis3
    ```

    To install the latest version of PostGIS for EDB Advanced Server version older than 13.0:

    ```text
    apt-get install edb-as<xx>-postgis
    ```

    where &lt;xx> is the Advanced Server version older than 13.0

    For example, to install the latest version of PostGIS for EDB Advanced Server version 12:

    ```text
    apt-get install edb-as12-postgis
    ```

    To install specific PostGIS version, for example 3.1.1,  on Debian platforms for EDB Advanced Server version, for example 11, invoke the following commands:

    On Debian 9:

    ```text
    apt-get install edb-as11-postgis-3.1=3.1.1-1+deb9
    ```

    On Debian 10:

    ```text
    apt-get install edb-as11-postgis-3.1=3.1.1-1+deb10
    ```

    On Ubuntu 18.04:

    ```text
    apt install edb-as11-postgis-3.1=3.1.1-1+ubuntu4
    ```

    On Ubuntu 20.04
    ```text
    apt install edb-as11-postgis-3.1=3.1.1-1+ubuntu5
    ```

<div id="using_the_SLES_host" class="registered_link"></div>

## Installing PostGIS on an SLES 12 x86-64 Host

Perform the following steps to install PostGIS on an SLES Host using the Zypper package manager:

Zypper will attempt to satisfy package dependencies as it installs a package but requires access to specific repositories not hosted at EDB.

1.  Assume superuser privileges.

    ```text
    sudo su -
    ```

2.  Use the following command to add the EDB repository to your SLES host:

    ```text
    zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo
    ```

3.  Invoke the following command to refresh the metadata:

    ```text
    zypper refresh
    ```

4.  Install `SUSEConnect` to register the host with SUSE to allow access to SUSE repositories:

    ```text
    zypper install SUSEConnect
    ```

5.  Register the host with SUSE to allow access to SUSE repositories and replace `'REGISTRATION_CODE'` and `'EMAIL'` with your SUSE registration information:

    ```text
    SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'
    SUSEConnect -p PackageHub/12.4/x86_64
    SUSEConnect -p sle-sdk/12.4/x86_64
    ```

6.  Install the following repository for PEM dependencies:

    ```text
    zypper addrepo https://download.opensuse.org/repositories/Apache:/Modules/SLE_12_SP4/Apache:Modules.repo
    ```

7.  Refresh the metadata:

    ```text
    zypper refresh
    ```

9.  Use the zypper utility to install PostGIS:

    ```text
    zypper -n install edb-as14f-postgis
    ```

## Installing PostGIS on a SLES 12 ppc64le Host


There are two steps to completing an installation:

- Setting up the repository
- Installing the package


For each step, you must be logged in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

Before setting up the repository, you need to register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

### Setting up the Repository

Setting up the repository is a one time task. If you have already set up your repository, you do not need to perform these steps.

```shell
# Install the repository configuration and enter your EDB repository 
# credentials when prompted
zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo

# Install SUSEConnect to register the host with SUSE, allowing access to 
# SUSE repositories
zypper install SUSEConnect

# Register the host with SUSE, allowing access to SUSE repositories
# Replace 'REGISTRATION_CODE' and 'EMAIL' with your SUSE registration 
# information
SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'

# Activate the required SUSE modules
SUSEConnect -p PackageHub/12.5/ppc64le
SUSEConnect -p sle-sdk/12.5/ppc64le

# Refresh the metadata
zypper refresh
```

### Installing the Package

```shell
zypper -n install edb-as14-postgis3
```



## Installing PostGIS on an SLES 15 x86-64 Host

There are two steps to completing an installation:

- Setting up the repository
- Installing the package

For each step, you must be logged in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

Before setting up the repository, you need to register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

### Setting up the Repository

Setting up the repository is a one time task. If you have already set up your repository, you do not need to perform these steps.

```shell
# Install the repository configuration and enter your EDB repository 
# credentials when prompted
zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo

# Install SUSEConnect to register the host with SUSE, allowing access to 
# SUSE repositories
zypper install SUSEConnect

# Register the host with SUSE, allowing access to SUSE repositories
# Replace 'REGISTRATION_CODE' and 'EMAIL' with your SUSE registration 
# information
SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'

# Activate the required SUSE modules
SUSEConnect -p sle-module-desktop-applications/15.3/x86_64
SUSEConnect -p sle-module-development-tools/15.3/x86_64

# Refresh the metadata
zypper refresh
```

### Installing the Package

```shell
zypper -n install edb-as14-postgis3
```


## Installing PostGIS on an SLES 15 ppc64le Host


There are three steps to completing an installation:

- Setting up the repository
- Installing the package


For each step, you must be logged in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

Before setting up the repository, you need to register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

### Setting up the Repository

Setting up the repository is a one time task. If you have already set up your repository, you do not need to perform these steps.

```shell
# Install the repository configuration and enter your EDB repository 
# credentials when prompted
zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo

# Install SUSEConnect to register the host with SUSE, allowing access to 
# SUSE repositories
zypper install SUSEConnect

# Register the host with SUSE, allowing access to SUSE repositories
# Replace 'REGISTRATION_CODE' and 'EMAIL' with your SUSE registration 
# information
SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'

# Activate the required SUSE modules
SUSEConnect -p sle-module-desktop-applications/15.3/ppc64le
SUSEConnect -d -p sle-module-development-tools/15.3/ppc64le

# Refresh the metadata
zypper refresh
```

### Installing the Package

```shell
zypper -n install edb-as14-postgis3
```



<div id="installing_on_Windows_host" class="registered_link"></div>

## Installing PostGIS on a Windows Host

You must install Advanced Server before installing PostGIS. If you have used the graphical Setup wizard to install EDB Postgres Advanced Server, you can use StackBuilder Plus to add PostGIS to your installation. For details about using the graphical installer to install and configure Advanced Server, see the EDB Postgres Advanced Server Installation Guide for Windows.

!!! Note

    To install PostGIS version 3.1 on EDB Postgres Advanced Server version 10 on Windows, you need to upgrade it to the latest EDB Postgres Advanced Server minor version of 10.16.25 (or later), and then proceed with PostGIS 3.1 installation. 
    
1.  Open StackBuilder Plus and select your Advanced Server installation from the drop-down list on the `Welcome` window. Click `Next` to continue to the application selection page.

    ![The StackBuilder Plus Welcome window](images/SBP_welcome.png)
    Fig. 1: The StackBuilder Plus Welcome window

2.  Expand the `Spatial Extensions` node, and check the box next to the PostGIS version. Click `Next` to continue.

3.  The selected packages and the default download directory are displayed; change the locations if required. Click `Next`.

    ![The Installation Directory window](images/postgis_installation.png)
    Fig. 2: The Installation Directory window

4.  Once you have downloaded the installation files, a confirmation message is displayed. Click `Next` to start the PostGIS installation.

    ![Installing Postgis](images/SBP_Installation_Files_Downloaded.png)
    Fig. 3: Installing Postgis

5.  Select an installation language and click `OK`.

6.  The PostGIS welcome screen is displayed. Click `Next`.

    ![The Postgis welcome window](images/postgis_welcome.png)
    Fig. 4: The Postgis welcome window

7.  Use the `Installation Directory` field to specify the directory you wish to install the PostGIS software. Click `Next` to continue.

8.  Use fields on the `EDB Postgres Advanced Server Installation Details` window to provide connection information for the Advanced Server host:

    -   Use the `Host` field to identify the system on which Advanced Server resides.

    -   Provide the name of the role that PostGIS will use for connections to the server in the `User Name` field.

    -   Provide the password associated with the role in the `Password` field.

    -   Use the `Port` field to identify the listener port that Advanced Server monitors for client connections.

        Click `Next` to continue.

      ![The Advanced Server installation details window](images/advanced_server_installation_details.png)
      Fig. 5: The Advanced Server installation details window

9.  The `Ready to Install` window notifies you when the installer has all of the information needed to install PostGIS on your system. Click `Next`.

    ![The ready to install window](images/ready_to_install.png)
    Fig. 6: The ready to install window

10. Progress bars inform you as the installation progresses. Click `Finish` to exit the installer when the PostGIS installation completes.

    ![The installation is complete](images/installattion_complete.png)

    Fig. 7: The installation is complete

    StackBuilder Plus will install PostGIS and create the `template_postgis` database and PostGIS functions.
